[tool.poetry]
name = "urwid-uikit"
version = "2.0.2"
description = "Commonly used UI widgets for urwid-based apps"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [
    { include = "urwid_uikit", from = "src" }
]
license = "MIT"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.9"
urwid = "^2.4.4"

[tool.poetry.group.dev.dependencies]

[tool.poetry.extras]

[tool.ruff]
ignore = ["B905", "C901", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
