[project]
name = "urwid-uikit"
version = "2.1.1"
description = "Commonly used UI widgets for urwid-based apps"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = ["urwid >= 2.4.4"]

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build>=0.7.18"]
build-backend = "uv_build"
